[TASK] Fixes and new Options

--- a/Resources/Private/Templates/Issue/Index.html
+++ b/Resources/Private/Templates/Issue/Index.html
@@ -2,6 +2,7 @@
 <div class="tx_voice tx_voice_shadow">
 	<span class="tx_voice_header">How can we help?</span>
 	<div class="userfeedbackform">
+		<div id="userfeedbackformerrors"></div>
 		<f:form action="create" noCache="1" object="{issue}" objectName="issue">
 			<f:form.hidden    id="tx_voice_collectedData" property="collectedData"/>
 			<f:form.hidden    id="tx_voice_imageData"     property="screenshot"/>
@@ -16,6 +17,23 @@
 
 			<div class="clearfix"></div>
 		</f:form>
+	</div>
+	<div class="userfeedbackformsending">
+		<p>
+			Your ideas are currently transfered. This won't take long.
+		</p>
+
+		<div class="b-evaluation"><a id="c1558"></a><h2 class="csc-firstHeader">Ask the community</h2><div class="csc-textpic csc-textpic-intext-right"><div class="csc-textpic-imagewrap"><div class="csc-textpic-image csc-textpic-firstcol csc-textpic-lastcol" style="width:0px;"><div></div><div class="csc-textpic-caption"></div></div></div><div class="csc-textpic-text"><p>Have developer or user question that you think the community can help with? Feel free to ask in one of our community areas.</p></div></div><div class="csc-textpic-clear"><!-- --></div><a id="c1563"></a><div class="g">
+			<div class="g-5">
+				<div class="gc"><a id="c1564"></a><ul class="arrow-list"><li><a href="http://forum.typo3.org/" target="_blank">TYPO3 Forum</a></li><li><a href="/support/mailing-lists/">Mailing lists</a></li></ul></div><!-- gc -->
+			</div><!-- g-5 -->
+			<div class="g-5">
+				<div class="gc"><a id="c1566"></a><ul class="arrow-list"><li><a href="http://typo3.org/?id=138" target="_blank">TYPO3 Wiki</a></li><li><a href="/support/irc-chat/">TYPO3 IRC</a></li></ul></div><!-- gc -->
+			</div><!-- g-5 -->
+		</div></div>
+	</div>
+	<div class="userfeedbackformdone">
+		Thank you for sharing your thoughts.
 	</div>
 </div>
 
