--- a/Resources/Private/Templates/Email/Index.html
+++ b/Resources/Private/Templates/Email/Index.html
@@ -11,6 +11,10 @@ Personaldata:
 - name   : {issue.name}
 - email  : {issue.email}
 
+Related Page:
+
+ - <{issue.collectedDataObject.jQueryBrowser.url}>
+
 ===============================================================================
 
 {issue.description}
