--- a/Resources/Private/Templates/Issue/Index.html
+++ b/Resources/Private/Templates/Issue/Index.html
@@ -1,6 +1,6 @@
 
-<div class="tx_voice tx_voice_shadow">
-	<span class="tx_voice_header">How can we help?</span>
+<div class="tx_voice">
+	<h1>How can we help?</h1>
 	<div class="userfeedbackform">
 		<div id="userfeedbackformerrors"></div>
 		<f:form action="create" noCache="1" object="{issue}" objectName="issue">
@@ -14,9 +14,6 @@
 			<f:form.textfield id="tx_voice_email"         property="email"       placeholder="Your E-Mail"/>
 
 			<f:form.submit value="Send Request"/>
-
-			<button value="Cancel" id="tx_voice_cancel">Cancel</button>
-
 			<div class="clearfix"></div>
 		</f:form>
 	</div>
