[FEATURE] Avoid flickering on appearing

--- a/Resources/Private/Templates/Issue/Index.html
+++ b/Resources/Private/Templates/Issue/Index.html
@@ -16,12 +16,12 @@
 			<div class="clearfix"></div>
 		</f:form>
 	</div>
-	<div class="userfeedbackformsending">
+	<div class="userfeedbackformsending" style="display:none;">
 		<p>
 			Your ideas are currently transfered. This won't take long.
 		</p>
 	</div>
-	<div class="userfeedbackformdone">
+	<div class="userfeedbackformdone" style="display:none;">
 		Thank you for sharing your thoughts.
 	</div>
 </div>
