[BUG] Fixed empty url in html and text mails.

--- a/Resources/Private/Templates/Email/Index.html
+++ b/Resources/Private/Templates/Email/Index.html
@@ -12,7 +12,7 @@ Personaldata:
 
 Related Page:
 
- - <{issue.collectedDataObject.jQueryBrowser.url}>
+ - {issue.url}
 
 ===============================================================================
 
