[FEATURE] Prefill user data for logged in users

--- a/Resources/Private/Templates/Issue/Index.html
+++ b/Resources/Private/Templates/Issue/Index.html
@@ -9,8 +9,8 @@
 			</f:if>
 			<f:form.textfield id="tx_voice_subject"       property="subject"     placeholder="Subject of the issue"/>
 			<f:form.textarea  id="tx_voice_description"   property="description" additionalAttributes="{placeholder: 'Description'}" rows="10" cols="60" />
-			<f:form.textfield id="tx_voice_name"          property="name"        placeholder="Your Name"     value="{nameValue}" />
-			<f:form.textfield id="tx_voice_email"         property="email"       placeholder="Your E-Mail"   value="{emailValue}" />
+			<f:form.textfield id="tx_voice_name"          property="name"        placeholder="Your Name"/>
+			<f:form.textfield id="tx_voice_email"         property="email"       placeholder="Your E-Mail"/>
 
 			<f:form.submit value="Send Request"/>
 			<div class="clearfix"></div>
